# gallerator

./: Makefile  README.md  pyproject.toml
icon/: README.md  generateIcon.js
release-tools/: replace-section.py
src/gallerator/: main.py
src/gallerator/renderers/photoswipe/: photoswipe.py
src/gallerator/renderers/photoswipe/static/: page.js
src/gallerator/renderers/photoswipe/templates/: page.html
src/gallerator/tests/: test_generated_set.py
src/pmorch_gallery/: constants.py  data_types.py  dynimport.py  gallery.py  generated_set.py  main.py  media_items.py  nanogallery2.py  thumbnails.py  url_strategy.py  video_images.py
src/pmorch_gallery/nanogallery2/: nanogallery2.py
src/pmorch_gallery/nanogallery2/static/: README.md
src/pmorch_gallery/nanogallery2/templates/: page.html
src/pmorch_gallery/photoswipe/: photoswipe.py
src/pmorch_gallery/photoswipe/static/: page.css
src/pmorch_gallery/photoswipe/templates/: page.html
src/pmorch_gallery/renderers/: renderer_util.py
src/pmorch_gallery/renderers/nanogallery2/: nanogallery2.py
src/pmorch_gallery/renderers/photoswipe/: photoswipe.py
src/pmorch_gallery/renderers/photoswipe/static/: README.md  page.css  (+1 more)
src/pmorch_gallery/renderers/static/: bootstrap-gallery.css
src/pmorch_gallery/renderers/templates/: bootstrap-gallery.html
src/pmorch_gallery/static/: README.md  bootstrap-gallery.css
src/pmorch_gallery/templates/: bootstrap-gallery.html  head.html  head_includes.html  page.js
src/pmorch_gallery/tests/: test_generated_set.py  test_thumbnails.py  test_url_strategy.py  test_video_images.py
(+3 files in other folders)
