[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmorch-gallery"
version = "0.0.1"
dependencies = [
  "Pillow",
  "vcsi",
  "tqdm",
  "Jinja2",
  # Under NixOS, import cv fails with
  # ImportError: libGL.so.1: cannot open shared object file: No such file or directory
  # "opencv-python",
]

[project.scripts]
pmorch-gallery = "pmorch_gallery.main:cli_main"