[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gallerator"
version = "0.0.1"
dependencies = [
  "Pillow",
  "vcsi",
  "tqdm",
  "Jinja2",
  "ruff",
]
# For Path.relative_to(other, walk_up=True)
requires-python = ">= 3.12"

[project.scripts]
gallerator = "gallerator.main:cli_main"
